--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "log-symbols": "^5.1.0",
     "lolcatjs": "^2.4.1",
     "pino": "^8.6.1",
+    "secure-json-parse": "^2.5.0",
     "vorpal": "^1.12.0",
     "ws": "^8.9.0"
   },
@@ -20,6 +21,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/node": "^18.8.3",
     "@types/vorpal": "^1.12.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
