--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "scripts": {
     "lint": "eslint --fix ./src/*",
-    "dev": "tsc --watch",
-    "build": "tsc"
+    "dev": "tsnd --respawn --transpile-only -- src/index.ts",
+    "build": "tsc --sourceMap false"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
 }
