--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "chalk": "^4.1.2",
     "figlet": "^1.5.2",
     "log-symbols": "^5.1.0",
     "lolcatjs": "^2.4.1",
