--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "lint": "eslint --fix ./src/*",
-    "dev": "tsnd --respawn --transpile-only -- src/index.ts",
+    "dev": "tsnd --clear --respawn --transpile-only -- src/index.ts",
     "build": "tsc --sourceMap false"
   },
   "devDependencies": {
