--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "build": "tsc --sourceMap false"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.5",
     "@types/node": "^18.8.3",
     "@types/vorpal": "^1.12.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
