--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/figlet": "^1.5.5",
     "@types/node": "^18.8.3",
     "@types/vorpal": "^1.12.2",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
